--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 
-<body>
+<body class="{{ prefs.theme if prefs is defined and prefs else 'light' }}">
   {% block content %}{% endblock %}
 </body>
 </html>
